--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "embla-carousel-autoplay": "^8.0.0-rc19",
     "embla-carousel-react": "^8.0.0-rc19",
     "next": "14.0.4",
+    "next-auth": "^4.24.6",
     "photoswipe": "^5.4.3",
     "react": "^18",
     "react-dom": "^18",
