--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.0",
     "react-redux": "^9.1.0",
+    "stripe": "^14.19.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
