--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "stripeCli": "stripe listen --forward-to localhost:3000/api/webhook"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
