--- a/package.json
+++ b/package.json
@@ -25,19 +25,25 @@
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.21",
     "@tanstack/react-table": "^8.11.6",
+    "accept-language": "^3.0.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "country-flag-icons": "^1.5.9",
     "dotenv-cli": "^7.4.1",
     "embla-carousel-autoplay": "^8.0.0-rc19",
     "embla-carousel-react": "^8.0.0-rc19",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-resources-to-backend": "^1.2.0",
     "next": "14.0.4",
     "next-auth": "^4.24.6",
     "photoswipe": "^5.4.3",
     "react": "^18",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^14.1.0",
     "react-icons": "^5.0.0",
     "react-redux": "^9.1.0",
     "stripe": "^14.19.0",
