--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "stripecli": "stripe listen --forward-to localhost:3000/api/webhook"
+    "stripecli": "stripe listen --forward-to localhost:3000/api/webhook",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
