--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-i18next": "^14.1.0",
     "react-icons": "^5.0.0",
     "react-redux": "^9.1.0",
+    "sharp": "^0.33.3",
     "stripe": "^14.19.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
