--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@next/bundle-analyzer": "^14.1.4",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -25,6 +26,7 @@
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.21",
     "@tanstack/react-table": "^8.11.6",
+    "@uploadthing/react": "^6.4.1",
     "@vercel/postgres": "^0.7.2",
     "accept-language": "^3.0.18",
     "class-variance-authority": "^0.7.0",
@@ -51,6 +53,7 @@
     "stripe": "^14.19.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.7.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
